--- a/Flexible_heater.html
+++ b/Flexible_heater.html
@@ -99,16 +99,13 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/micabandheater.jpg" />
+                                    <img src="images/flexibleheaters1.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="images/micabandheater1.jpeg" />
+                                    <img src="images/flexibleheaters2.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="images/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="images/micaspecs2.png" />
+                                    <img src="images/flexibleheaterspecs.png" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -116,16 +113,13 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/micabandheater.jpg" />
+                                    <img src="pics/flexibleheaters1.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micabandheater1.jpg" />
+                                    <img src="pics/flexibleheaters2.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="pics/micaspecs2.png" />
+                                    <img src="pics/flexibleheaterspecs.png" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -136,19 +130,19 @@
                     <div class="right-content">
                         <h4>Flexible Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;"> Mica Band Heater can perform at an operating temperature [in
-                            application up to 350°C] essential to process high temperature resins in plastic processing
-                            machines. Mica Band assure maintaining the lowest winding temperature possible, keeping
-                            low-mass heating element assembly for fast heat-up and quick thermal response to controls.
-                            It corporate the low thermal expansion built these heaters is designed with brass and
-                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
-                            <strong>Winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
-                            winding machine assuring constant repeatability and uniformity.
-                            <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
-                            <strong> Internal casing </strong>stainless steel with high thermal conductivity for
-                            guaranteed maximum heat transmission to the plasticization cylinders.<br>
-                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive plate. A metallic protection shields.<br>
-                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel copper. External fiberglass insulated. External protection in metallic braiding with various options.<br>
+                        <p style="text-align: justify;"> SMAJ’S Flexible Tubular Heater are for Heating Manifolds in the
+                            most efficient manner. Easiest handling, simple assembly, improved thermal performance and
+                            the simple storage are some of the crucial advantages of the Flexible Tubular Heaters over
+                            the Traditional Manifold Tubular Heating Elements. Flexible Tubular Heaters eliminates
+                            costly downtime associated with waiting for a custom bent tubular heater. Flexible Tubular
+                            Heater is your best choice for immediate, durable, high performance replacement heaters.
+                            The Flexible Tubular heaters compress into the groove and provide excellent heat transfer.
+                            Straight lengths available Ex-Stock eliminate costly downtime associated with waiting for
+                            custom bent tubular heaters. Engineered with a robust design incorporating greater thermal
+                            mass, our Flexible Tubular Heater is user-formable with a flexible solid casing that stays
+                            in the groove, yet is easy to install.<br><br>
+                            <strong>STANDARD SIZE - 8.0 MM 8.5 MM</strong><br>
+                            
                         </p>
                         <span>In stock</span>
                         <!-- <form action="" method="get">
