--- a/brass_pressed_heater.html
+++ b/brass_pressed_heater.html
@@ -99,16 +99,10 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/micabandheater.jpg" />
+                                    <img src="images/brasspressedheaters1.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="images/micabandheater1.jpeg" />
-                                </li>
-                                <li>
-                                    <img src="images/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="images/micaspecs2.png" />
+                                    <img src="images/brasspressedheaters2.jpeg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -116,16 +110,10 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/micabandheater.jpg" />
+                                    <img src="pics/brasspressedheaters1.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micabandheater1.jpg" />
-                                </li>
-                                <li>
-                                    <img src="pics/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="pics/micaspecs2.png" />
+                                    <img src="pics/brasspressedheaters2.jpeg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -136,19 +124,28 @@
                     <div class="right-content">
                         <h4>Brass Pressed Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;"> Mica Band Heater can perform at an operating temperature [in
-                            application up to 350°C] essential to process high temperature resins in plastic processing
-                            machines. Mica Band assure maintaining the lowest winding temperature possible, keeping
-                            low-mass heating element assembly for fast heat-up and quick thermal response to controls.
-                            It corporate the low thermal expansion built these heaters is designed with brass and
-                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
-                            <strong>Winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
-                            winding machine assuring constant repeatability and uniformity.
-                            <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
-                            <strong> Internal casing </strong>stainless steel with high thermal conductivity for
-                            guaranteed maximum heat transmission to the plasticization cylinders.<br>
-                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive plate. A metallic protection shields.<br>
-                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel copper. External fiberglass insulated. External protection in metallic braiding with various options.<br>
+                        <p style="text-align: justify;"> Pressed in brass coil heaters are made of Small Cross Section
+                            Micro coil heaters coiled in to a slot of cylindrical brass sleeve and then pressed together
+                            for better and efficient heat transfer. The Coil Heating Element is available with an option
+                            of using either Brass or Stainless Steel sleeves. The Coil Heating Element can be encased
+                            only on outer surface or both on the Outer & Inner Surfaces for more protection from
+                            Mechanical Damages.<br><br>
+                            <strong>Features: </strong><br>
+                            Compact and robust design with small wall thickness<br>
+                            Precise power distribution.<br>
+                            Customer specific design.<br>
+                            Highest reproductivity<br>
+                            Smallest tolerance.<br>
+                            Has quick heat dissipation, high insulation, greatly extend the service life of heater
+                            Can be built with a micro, mini, flat, low profile or round coil heater.<br>
+                            Safety in use.<br>
+                            Faster responding heater due to eliminated air pockets than cast in brass<br>
+                            Profile and heater orientation precisely repeatable<br>
+                            Thermocouple not exposed to molten brass temperatures Improved durability<br>
+                            Potential for designing thin walled brass heaters to minimize OD impact<br>
+                            Faster responding heater due to eliminated air pockets than cast in brass<br><br>
+                            <strong>Application: </strong><br>
+                            Hot runner system heating of liquids, with tubes, heating of metals, with circular cross section.
                         </p>
                         <span>In stock</span>
                         <!-- <form action="" method="get">
