--- a/manifold_heater.html
+++ b/manifold_heater.html
@@ -99,16 +99,10 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/micabandheater.jpg" />
+                                    <img src="images/manifoldheaters1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/micabandheater1.jpeg" />
-                                </li>
-                                <li>
-                                    <img src="images/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="images/micaspecs2.png" />
+                                    <img src="images/manifoldheaters2.jpeg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -116,16 +110,10 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/micabandheater.jpg" />
+                                    <img src="pics/manifoldheaters1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micabandheater1.jpg" />
-                                </li>
-                                <li>
-                                    <img src="pics/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="pics/micaspecs2.png" />
+                                    <img src="pics/manifoldheaters2.jpeg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -136,19 +124,21 @@
                     <div class="right-content">
                         <h4>Manifold Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;"> Mica Band Heater can perform at an operating temperature [in
-                            application up to 350°C] essential to process high temperature resins in plastic processing
-                            machines. Mica Band assure maintaining the lowest winding temperature possible, keeping
-                            low-mass heating element assembly for fast heat-up and quick thermal response to controls.
-                            It corporate the low thermal expansion built these heaters is designed with brass and
-                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
-                            <strong>Winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
-                            winding machine assuring constant repeatability and uniformity.
-                            <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
-                            <strong> Internal casing </strong>stainless steel with high thermal conductivity for
-                            guaranteed maximum heat transmission to the plasticization cylinders.<br>
-                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive plate. A metallic protection shields.<br>
-                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel copper. External fiberglass insulated. External protection in metallic braiding with various options.<br>
+                        <p style="text-align: justify;"> SMAJ’S manifold heaters are highly compressed and most advanced
+                            heating solution for injection manifolds. The manifold heater allows excellent heat exchange
+                            between the surfaces of heater and manifold. These heaters are installed by careful
+                            hammering on the heaters along with section grove over the manifold and pressed to hold the
+                            heaters in position and to get good surface contact, which results in good thermal exchange
+                            and increases the heater life and reduces energy loss.<br>
+                            These elements are commonly used to fit into milled grooves for hot runner molding systems.
+                            The precision fit optimizes heat transfer to the working surface. Our skilled benders and
+                            specialized bending equipment allow us to bend complex shapes. The Manifold Tubular Heating
+                            Elements are Custom Designed.<br>
+                            The Manifold Tubular Heating Elements are available in Round diameters of <strong>6.5 mm, 8 mm & 8.5
+                            mm </strong>and in the Square diameters of <strong>6 mm x 6 mm & 8 mm x 8 mm</strong>. Apart from this, other
+                            diameters can be custom manufactured as per Customers drawings.
+                            To Manufacture the Manifold Tubular Heater, it is necessary to have an accurate drawing
+                            showing all the Center Distances, Bending Radius & Bending Degree<br>
                         </p>
                         <span>In stock</span>
                         <!-- <form action="" method="get">
