--- a/product.html
+++ b/product.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <figure><img src="pics/immersionheaters1.jpg" alt="#" /></figure>
                               <a href="immersion_heater.html">
                                  <h3>Immersion Heater</h3>
                               </a>
@@ -168,7 +168,7 @@
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <figure><img src="pics/microcoilheaters1.jpg" alt="#" /></figure>
                               <a href="micro_coil_heater.html">
                                  <h3>Micro Coil Heater</h3>
                               </a>
@@ -176,7 +176,7 @@
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <figure><img src="pics/flexibleheaters1.jpeg" alt="#" /></figure>
                               <a href="Flexible_heater.html">
                                  <h3>Flexible Heater</h3>
                               </a>
@@ -184,7 +184,7 @@
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <figure><img src="pics/manifoldheaters1.jpg" alt="#" /></figure>
                               <a href="manifold_heater.html">
                                  <h3>ManiFold Heater</h3>
                               </a>
@@ -192,7 +192,7 @@
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <figure><img src="pics/brasspressedheaters1.jpeg" alt="#" /></figure>
                               <a href="brass_pressed_heater.html">
                                  <h3>Brass Pressed Heater</h3>
                               </a>
