--- a/immersion_heater.html
+++ b/immersion_heater.html
@@ -99,33 +99,28 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/micabandheater.jpg" />
+                                    <img src="images/immersionheaters1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/micabandheater1.jpeg" />
+                                    <img src="images/immersionheaters2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/micaspecs1.png" />
+                                    <img src="images/immersionheatersspecs.png" />
                                 </li>
-                                <li>
-                                    <img src="images/micaspecs2.png" />
-                                </li>
+
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
                         </div>
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/micabandheater.jpg" />
+                                    <img src="pics/immersionheaters1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micabandheater1.jpg" />
+                                    <img src="pics/immersionheaters2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="pics/micaspecs2.png" />
+                                    <img src="pics/immersionheatersspecs.png" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -136,19 +131,36 @@
                     <div class="right-content">
                         <h4>Immersion Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;"> Mica Band Heater can perform at an operating temperature [in
-                            application up to 350°C] essential to process high temperature resins in plastic processing
-                            machines. Mica Band assure maintaining the lowest winding temperature possible, keeping
-                            low-mass heating element assembly for fast heat-up and quick thermal response to controls.
-                            It corporate the low thermal expansion built these heaters is designed with brass and
-                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
-                            <strong>Winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
-                            winding machine assuring constant repeatability and uniformity.
-                            <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
-                            <strong> Internal casing </strong>stainless steel with high thermal conductivity for
-                            guaranteed maximum heat transmission to the plasticization cylinders.<br>
-                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive plate. A metallic protection shields.<br>
-                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel copper. External fiberglass insulated. External protection in metallic braiding with various options.<br>
+                        <p style="text-align: justify;"> 
+                            SMAJ offers you the most complete selection of quality built heaters extending from basic products for liquid immersion heating to highly engineered process circulating heating systems including power and temperature control instrumentation. 
+                            A variety of designs and large selection of standard physical sizes, watt densities and electrical ratings are available. Electric Process heaters are the most efficient methods for heating water, light to heavy oils, heat transfer fluids,air and other gases and for generating super heated steam.<br><br>
+                            <strong>IMMERSION HEATERS TYPICAL CONFIGURATIONS INCLUDE:</strong><br>
+                            - Flanged Immersion Heaters<br>
+                            - Screw Plug Immersion Heaters<br>
+                            - Over-The-Side Immersion Heaters<br>
+                            - Electric Fired Heat Exchangers, also called Circulation Heaters, forced flow through pressure vessels, suction and outflow heaters<br><br>
+                            <strong>IMMERSION HEATERS OFFER A WIDE ARRAY OF SPECIAL FEATURES AND OPTIONS SUCH AS:</strong><br>
+                            - Built in thermostats<br>
+                            - Built in temperature sensors like thermocouples and RTD's<br>
+                            - Fitting materials of steel, brass, stainless steel or other specialized metals<br>
+                            - Heater tube sheath materials include Copper, Steel, Stainless Steel, Incoloy, Titanium, Silica quartz glasstube and Teflon<br><br>
+
+                            <strong>Applications:</strong><br>
+                            Immersion heaters are used for heating a wide range ofliquids and gases in applicationareas like heating of :<br>
+                            - Fuel Oils<br>
+                            - Chemicals<br>
+                            - Process Water<br>
+                            - Hydraulic Oils<br>
+                            - Acid Solutions<br>
+                            - Deionized Water<br>
+                            - Steam and Vapors<br>
+                            - Ethylene Glycol<br>
+                            - Liquid Mixtures<br>
+                            - Water Purification<br>
+                            - Alkaline Solutions<br>
+                            - Heat Transfer Fluids<br>
+                            - Degreasing Solutions<br>
+                            - Petroleum Products and many more...
                         </p>
                         <span>In stock</span>
                         <!-- <form action="" method="get">
