--- a/micro_coil_heater.html
+++ b/micro_coil_heater.html
@@ -99,34 +99,30 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/micabandheater.jpg" />
+                                    <img src="images/microcoilheaters1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/micabandheater1.jpeg" />
+                                    <img src="images/microcoilheaters2.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="images/micaspecs1.png" />
+                                    <img src="images/microcoilheaterspecs.png" />
                                 </li>
-                                <li>
-                                    <img src="images/micaspecs2.png" />
-                                </li>
+
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
                         </div>
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/micabandheater.jpg" />
+                                    <img src="pics/microcoilheaters1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micabandheater1.jpg" />
+                                    <img src="pics/microcoilheaters2.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micaspecs1.png" />
+                                    <img src="pics/microcoilheaterspecs.png" />
                                 </li>
-                                <li>
-                                    <img src="pics/micaspecs2.png" />
-                                </li>
+
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
                         </div>
@@ -136,19 +132,16 @@
                     <div class="right-content">
                         <h4>Micro Coil Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;"> Mica Band Heater can perform at an operating temperature [in
-                            application up to 350°C] essential to process high temperature resins in plastic processing
-                            machines. Mica Band assure maintaining the lowest winding temperature possible, keeping
-                            low-mass heating element assembly for fast heat-up and quick thermal response to controls.
-                            It corporate the low thermal expansion built these heaters is designed with brass and
-                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
-                            <strong>Winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
-                            winding machine assuring constant repeatability and uniformity.
-                            <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
-                            <strong> Internal casing </strong>stainless steel with high thermal conductivity for
-                            guaranteed maximum heat transmission to the plasticization cylinders.<br>
-                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive plate. A metallic protection shields.<br>
-                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel copper. External fiberglass insulated. External protection in metallic braiding with various options.<br>
+                        <p style="text-align: justify;"> 
+                            SMAJ'S Micro Coil Heater is a high performance heater for smaller diameter Nozzles and Nozzle Tips that can also be formed in grooves to create three dimensional heating applications. 
+                            Owing to their small cross-sectional dimensions, Micro Coil Heater is most often connected at both ends and do not permit the integration of a thermocouple.<br>
+                            The Controlled atmosphere annealing at the end of the manufacturing process allows the bending of this type of Micro Coil Heater into very complex shapes with extremely narrow bending radius. 
+                            Passing through this process helps the Micro Coil Heater have total flexibility in the distribution of heating density on the whole surface of the heated body.<br>
+                            To ensure that the standard 1000 mm PTFE-insulated connection cable can be positioned at one end, despite the standard two-ended connection of the element, in most cases the Micro Coil Heater is formed into a hairpin shape and wound in a parallel format. 
+                            Our unformed Micro Coil Heater is also supplied in the hairpin bend shape as standard. Micro Coil Heater solves heating problems, where space is limited<br><br>
+                            
+                            <strong>Applications:</strong><br>
+                            - PET Preform Moulds l Hot Runner Nozzles & Bushings l Thin Walled Container Moulds
                         </p>
                         <span>In stock</span>
                         <!-- <form action="" method="get">
