--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
          <div class="row d_flex">
             <div class="col-md-5">
                <div class="titlepage">
-                  <h2>About Us</h2>
+                  <h2 style = "text-align: center;">About Us</h2>
                   <p style="text-align: justify;"> Established in 1985, SMAJ INDUSTRIES manufactures and
                      supplies a wide range of heaters and sensors. Using 
                      premium raw materials and thorough R and D, the products
@@ -105,7 +105,27 @@
                      ructure supports efficient production and timely delivery.
                      The company's client-centric approach, ethical policies, 
                      and flexible solutions have helped them serve clients 
-                     across the Indian Subcontinent effectively.</p>
+                     across the Indian Subcontinent effectively.<br><br>
+                     <h3 style = "text-align: center;">Our Vision</h3>
+                     Cost Efficiency, Quality Execution, On Time Completion Hassle Free Handover. <br><br>
+                     <h3 style = "text-align: center;">Our Mission</h3>
+                     Delivering World-Class Performance / Service. <br><br>
+                     <h3 style = "text-align: center;">Our Commitment</h3>
+                     We develop relationship that make a positive difference in our customers growth in their business. We uphold the highest standards of integrity in all our actions.<br><br>
+                     <h3 style = "text-align: center;">Sector We Cater</h3>
+                     - Plastic and Rubber Industries <br>   
+                     - Chemical Industries <br>
+                     - HVAC Industries <br>
+                     - Hotel Industries <br>
+                     - Cement Industries <br>
+                     - Medical Industries <br>
+                     - Automobile Industries <br>
+                     - Etc where ever heat is required
+
+
+
+
+                  </p>
                </div>
             </div>
             <div class="col-md-7">
