--- a/about.html
+++ b/about.html
@@ -90,40 +90,22 @@
          <div class="row d_flex">
             <div class="col-md-5">
                <div class="titlepage">
-                  <h2 style = "text-align: center;">About Us</h2>
+                  <h2 style="text-align: center;">About Us</h2>
                   <p style="text-align: justify;"> Established in 1985, SMAJ INDUSTRIES manufactures and
-                     supplies a wide range of heaters and sensors. Using 
+                     supplies a wide range of heaters and sensors. Using
                      premium raw materials and thorough R and D, the products
-                     meet high industry standards and come in various 
+                     meet high industry standards and come in various
                      specifications to satisfy diverse client demands. Known
                      for their longevity, corrosion resistance, performance,
-                     and excellent conductivity, these products have driven 
-                     significant growth. This success is attributed to a 
+                     and excellent conductivity, these products have driven
+                     significant growth. This success is attributed to a
                      dedicated team of engineers, technocrats, managers, and
-                     skilled laborers who innovate and meet evolving client 
+                     skilled laborers who innovate and meet evolving client
                      needs. Based in Vasai, Maharashtra, their modern infrast
                      ructure supports efficient production and timely delivery.
-                     The company's client-centric approach, ethical policies, 
-                     and flexible solutions have helped them serve clients 
+                     The company's client-centric approach, ethical policies,
+                     and flexible solutions have helped them serve clients
                      across the Indian Subcontinent effectively.<br><br>
-                     <h3 style = "text-align: center;">Our Vision</h3>
-                     Cost Efficiency, Quality Execution, On Time Completion Hassle Free Handover. <br><br>
-                     <h3 style = "text-align: center;">Our Mission</h3>
-                     Delivering World-Class Performance / Service. <br><br>
-                     <h3 style = "text-align: center;">Our Commitment</h3>
-                     We develop relationship that make a positive difference in our customers growth in their business. We uphold the highest standards of integrity in all our actions.<br><br>
-                     <h3 style = "text-align: center;">Sector We Cater</h3>
-                     - Plastic and Rubber Industries <br>   
-                     - Chemical Industries <br>
-                     - HVAC Industries <br>
-                     - Hotel Industries <br>
-                     - Cement Industries <br>
-                     - Medical Industries <br>
-                     - Automobile Industries <br>
-                     - Etc where ever heat is required
-
-
-
 
                   </p>
                </div>
@@ -136,6 +118,39 @@
          </div>
       </div>
    </div>
+   <div class="about">
+      <div class="container">
+         <div class="row d_flex">
+            <div class="col-md-5">
+               <div class="titlepage">
+                  <h3 style="text-align: center;"><b>Our Vision</b></h3>
+                  <p>Cost Efficiency, Quality Execution, On Time Completion Hassle Free Handover.</p>
+                  <h3 style="text-align: center;"><b>Our Mission</b></h3>
+                  <p>World-Class Performance / Service. </p>
+                  <h3 style="text-align: center;"><b>Our Commitment</b></h3>
+                  <p>We develop relationship that make a positive difference in our customers growth in their business.
+                  We uphold the highest standards of integrity in all our actions.</p>
+                  <h3 style="text-align: center;"><b>Sector We Cater</b></h3>
+                  <p>- Plastic and Rubber Industries <br>
+                  - Chemical Industries <br>
+                  - HVAC Industries <br>
+                  - Hotel Industries <br>
+                  - Cement Industries <br>
+                  - Medical Industries <br>
+                  - Automobile Industries <br>
+                  - Etc where ever heat is required
+                  </p>
+               </div>
+            </div>
+            <div class="col-md-7">
+               <div class="about_img">
+                  <figure><img src="images/aboutimage.png" alt="#" /></figure>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   </div>
    </div>
    <!-- end about section -->
    <!--  footer -->
@@ -146,9 +161,12 @@
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                   <img class="logo1" src="pics/output-onlinepngtools.png" alt="#" />
                   <ul class="social_icon">
-                     <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                     <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                     <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                     <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook"
+                              aria-hidden="true"></i></a></li>
+                     <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square"
+                              aria-hidden="true"></i></a></li>
+                     <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram"
+                              aria-hidden="true"></i></a></li>
                   </ul>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
