--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-7">
                <div class="about_img">
-                  <figure><img src="images/aboutimage.png" alt="#" /></figure>
+                  <figure><img src="images/blue_logo_abt.png" alt="#" /></figure>
                </div>
             </div>
          </div>
