--- a/coil_nozzle_heater.html
+++ b/coil_nozzle_heater.html
@@ -195,7 +195,7 @@
                    <li>Reg. Off:- 3rd Laxmibai Sawant Comp. JBM Road Amboli,<br>
                       Andheri (W), Mumbai 400058<br>
                       Call or whatsapp : +91-9820484156, 9892908010, 9769933505<br>
-                      Email us on :- smajheaters@gmail.com<br>
+                      Email us on :- admin@smajheaters.com<br>
                    </li>
                 </ul>
              </div>
